--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -1,3 +1,3 @@
 <template name="header">
-  <h1>GitHub Organization Reports</h1>
+  <h1><a href="/">GitHub Organization Reports</a></h1>
 </template>
