--- a/src/client/templates/header.html
+++ b/src/client/templates/header.html
@@ -1,28 +1,23 @@
 <template name="header">
-	<div class="navbar navbar-default">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="/"><i class="mdi-maps-layers"></i> GitHub Organization Reports</a>
-		</div>
-		<div class="navbar-collapse collapse navbar-responsive-collapse">
-			<ul class="nav navbar-nav">
-				<li class="dropdown">
-					<a href="#" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Explore <b class="caret"></b></a>
-					<ul class="dropdown-menu">
-						<li><a href="javascript:void(0)">Most Popular</a></li>
-						<li><a href="javascript:void(0)">Most Active</a></li>
-					</ul>
-				</li>
-			</ul>
-<!--  Trying to move the search bar to the header. Not ready
-			<form name="organization-entry" class="navbar-form navbar-left">
-				<input class="form-control col-lg-8" id="enter-organization" type="textfield">
-			</form>
--->
-		</div>
-	</div>
+  <div class="navbar navbar-default">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/"><i class="mdi-maps-layers"></i> GitHub Organization Reports</a>
+    </div>
+    <div class="navbar-collapse collapse navbar-responsive-collapse">
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a href="#" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Explore <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Most Popular</a></li>
+            <li><a href="#">Most Active</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
 </template>
